2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Make sure checkout path actually exists before running metrics.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Avoids 'nan' values.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not trust external tools output.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix the query in get_path_for_revision() again to make it work
	with mysql too.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix get_path_for_revision() when a path has been reanmed or moved
	multiple times.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix the query in get_path_for_revision()
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not call get_path_for_revision() with CVS repos.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Ignore directories.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add more information in error messages.
	
2008-09-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add a profiler for get_path_for_revision()
	
2008-09-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Database.py:

	Save the old_path of a renamed or moved file in the actions table.

	* pycvsanaly2/utils.py:

	Add a funtion to figure out the path a given file for any revision.
	
	* pycvsanaly2/extensions/Metrics.py:

	Use the correct path for renamed or moved files.
	
2008-09-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
