@@ -169,8 +169,9 @@ class FileMetricsC (FileMetrics):
             halstead_volume = None
         try:
             halstead_level = float (values[3].replace (',', '.'))
-            if halstead_level == float ('inf') or halstead_level == float ('nan'):
-                halstead_level = None
+            if str (halstead_level) == str (float ('inf')) \
+                or str (halstead_level) == str (float ('nan')):
+                    halstead_level = None
         except:
             halstead_level = None
         try:
